--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "ruslan_sgs/smartgas-lib-auth",
   "description": "Smartgas company auth API",
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "type": "library",
   "license": "unlicense",
   "authors": [
