--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "ruslan_sgs/smartgas-lib-auth",
+  "version": "1.0.0",
   "description": "Smartgas company auth API",
   "minimum-stability": "stable",
   "type": "library",
