--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,9 @@
     }
   ],
   "require": {
+    "orchestra/testbench": "^8.21",
     "laravel/sanctum": "^3.2",
     "tymon/jwt-auth": "^2.1"
-  },
-  "require-dev": {
-    "orchestra/testbench": "^8.21"
   },
   "autoload": {
     "psr-4": {
