--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     }
   ],
   "require": {
+    "illuminate/console": "^9.21|^10.0",
     "orchestra/testbench": "^8.22.3",
     "laravel/sanctum": "^3.3.3",
     "tymon/jwt-auth": "^2.1.1"
