--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
     }
   ],
   "require": {
-    "illuminate/console": "^9.21|^10.0",
-    "orchestra/testbench": "^8.22.3",
-    "laravel/sanctum": "^3.3.3",
-    "tymon/jwt-auth": "^2.1.1"
+    "laravel/sanctum": "^3.2",
+    "tymon/jwt-auth": "^2.1"
+  },
+  "require-dev": {
+    "orchestra/testbench": "^8.21"
   },
   "autoload": {
     "psr-4": {
