--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
   ],
   "require": {
     "php": "^8.2",
-    "tymon/jwt-auth": "v2.1.1",
-    "laravel/sanctum": "^3.3"
+    "tymon/jwt-auth": "v2.1.1"
   },
   "require-dev": {
+    "laravel/sanctum": "^3.3",
     "orchestra/testbench": "^8.21"
   },
   "autoload": {
