--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,13 @@
     "psr-4": {
       "Ruslan_sgs\\SmartgasLibAuth\\Tests\\": "tests/"
     }
+  },
+  "scripts": {
+    "post-autoload-dump": [
+      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+      "@php artisan package:discover --ansi",
+      "@php artisan vendor:publish --tag=smartgas-config --force",
+      "@php artisan vendor:publish --tag=smartgas-controller --force"
+    ]
   }
 }
