beta version auth lib

--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,11 @@
       "Ruslan_sgs\\SmartgasLibAuth\\Tests\\": "tests/"
     }
   },
-  "scripts": {
-    "post-autoload-dump": [
-      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-      "@php artisan package:discover --ansi",
-      "@php artisan vendor:publish --tag=smartgas-config --force",
-      "@php artisan vendor:publish --tag=smartgas-controller --force"
-    ]
+  "extra": {
+    "laravel": {
+      "providers": [
+        "Ruslan_sgs\\SmartgasLibAuth\\Providers"
+      ]
+    }
   }
 }
