beta version auth lib

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
   "extra": {
     "laravel": {
       "providers": [
-        "Ruslan_sgs\\SmartgasLibAuth\\Providers"
+        "Ruslan_sgs\\SmartgasLibAuth\\Providers\\AuthProvider"
       ]
     }
   }
